tests/Unit/PHPStan/Rules/Fixtures/DisallowAnonymousFunction/Invalid/StaticAnonymousFunction.php
<?php

declare(strict_types=1);

namespace SquidIT\Tests\PhpCodingStandards\Unit\PHPStan\Rules\Fixtures\DisallowAnonymousFunction\Invalid;

$fn = static function (): string {
    return 'static anonymous';
};
